--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "graphcool-binding": "^0.2.4",
-    "graphql-tools": "^2.14.0",
-    "graphql-yoga": "^0.4.2",
+    "graphql": "^0.12.0",
+    "graphql-tools": "^2.14.1",
+    "graphql-yoga": "^0.5.5",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0"
   },
