--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "scripts": {
     "start": "dotenv -- nodemon -x ts-node -e ts,graphql src/index.ts",
     "debug": "dotenv -- nodemon -x 'ts-node --inspect' -e ts,graphql src/index.ts",
+    "bind": "graphql prepare",
     "playground": "dotenv -- graphql playground",
     "build": "rm -rf dist && tsc",
     "deploy": "now --public --dotenv .env.prod && now alias && now rm --yes --safe graphql-file",
     "now-start": "node dist"
   },
   "dependencies": {
-    "graphcool-binding": "^0.2.4",
+    "graphcool-binding": "^0.4.3",
     "graphql": "^0.12.0",
-    "graphql-tools": "^2.14.1",
+    "graphql-import": "^0.1.9",
     "graphql-yoga": "^0.5.5",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "dotenv-cli": "^1.4.0",
     "graphql-cli": "^2.0.5",
+    "graphql-cli-prepare": "^1.3.0",
     "nodemon": "^1.12.5",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2"
