--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "now-start": "node dist"
   },
   "dependencies": {
-    "graphcool-binding": "^0.4.3",
+    "graphcool-binding": "1.3.0",
     "graphql": "^0.12.0",
     "graphql-import": "^0.1.9",
-    "graphql-yoga": "^0.5.5",
+    "graphql-yoga": "0.8.4",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.1.0"
   },
   "devDependencies": {
     "dotenv-cli": "^1.4.0",
     "graphql-cli": "^2.0.5",
-    "graphql-cli-prepare": "^1.3.0",
+    "graphql-cli-prepare": "^1.4.6",
     "nodemon": "^1.12.5",
     "ts-node": "^3.3.0",
     "typescript": "^2.6.2"
