--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SERVER_ENDPOINT="http://localhost:5000"
-GRAPHCOOL_ENDPOINT="http://localhost:60000/graphql-server-github-auth-example/dev"
-GRAPHCOOL_SECRET="so-secret"
+PRISMA_ENDPOINT="http://localhost:4466/prisma-github-auth-example/dev"
+PRISMA_SECRET="so-secret"
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 JWT_SECRET="sosecret"
