--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -7,8 +7,8 @@ projects:
   database:
     schemaPath: src/generated/database.graphql
     extensions:
-      graphcool: graphcool.yml
+      prisma: database/prisma.yml
       binding:
-        output: src/generated/graphcool.ts
-        generator: graphcool-ts
+        output: src/generated/prisma.ts
+        generator: prisma-ts
   
