--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "now-start": "node dist"
   },
   "dependencies": {
-    "graphcool-binding": "^1.3.3",
     "graphql": "^0.12.0",
     "graphql-import": "^0.1.9",
     "graphql-yoga": "^1.1.4",
     "isomorphic-fetch": "^2.2.1",
-    "jsonwebtoken": "^8.1.0"
+    "jsonwebtoken": "^8.1.0",
+    "prisma-binding": "^1.3.8"
   },
   "devDependencies": {
     "dotenv-cli": "^1.4.0",
